# floaty

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: release.yml
docs/superpowers/specs/: 2026-03-29-open-close-notes-design.md
src/: editor.js  note.html  note.js  panel.html  panel.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  notes.rs  preferences.rs  windows.rs
